// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src >> themes >> Text Body Text render Render body test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIDisplay-Regular",
        "fontSize": 18,
      },
    ]
  }
>
  Body variant
</Text>
`;

exports[`src >> themes >> Text BodySmall Text render Render BodySmall test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIDisplay-Regular",
        "fontSize": 16,
      },
    ]
  }
>
  Caption variant
</Text>
`;

exports[`src >> themes >> Text BodyXSmall Text render Render BodyXSmall test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIDisplay-Regular",
        "fontSize": 14,
      },
    ]
  }
>
  Caption variant
</Text>
`;

exports[`src >> themes >> Text Intro Text render Render intro test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Semibold",
        "fontSize": 16,
      },
    ]
  }
>
  Body variant
</Text>
`;

exports[`src >> themes >> Text h1 Text render Render h1 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Bold",
        "fontSize": 52,
      },
    ]
  }
>
  H1 variant
</Text>
`;

exports[`src >> themes >> Text h2 Text render Render h2 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Bold",
        "fontSize": 32,
      },
    ]
  }
>
  H2 variant
</Text>
`;

exports[`src >> themes >> Text h3 Text render Render h3 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Bold",
        "fontSize": 24,
      },
    ]
  }
>
  H3 variant
</Text>
`;

exports[`src >> themes >> Text h4 Text render Render h4 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Regular",
        "fontSize": 20,
      },
    ]
  }
>
  H3 variant
</Text>
`;
